# movie-list

./: README.md
backend/: .env  Cargo.toml  init-db.sql
backend/migrations/2022-04-21-120351_create_movies_owner/: down.sql  up.sql
backend/rest/: movies.http
backend/src/: main.rs  schema.rs
backend/src/controllers/: movies.rs
backend/src/db/: mod.rs  movie.rs  owner.rs
backend/src/services/: movie.rs
common/: Cargo.toml
common/src/models/: mod.rs  movie.rs  owner.rs
frontend/: Cargo.toml  index.html
frontend/assets/styles/: index.scss
frontend/assets/styles/CUBE/: block.scss  composition.scss  global.scss  index.scss  utility.scss
frontend/assets/styles/fonts/: index.scss
frontend/src/: lib.rs  main.rs
frontend/src/components/: list_view.rs  mod.rs  movie_item.rs
frontend/src/components/common/: accordion.rs  loading.rs  mod.rs
frontend/src/services/: movie.rs
